# kubernetes-assistant

./: .env.example  .gitignore  Dockerfile  LICENSE.txt  README.md  docker-compose.yml  pyproject.toml
.claude/commands/: test.md
.github/workflows/: auto-release.yml  docker-build.yml  docker-release.yml  pr-tests.yml
src/kubernetes_assistant/: __about__.py  __init__.py  __main__.py  cli.py  config.py  kubernetes_assistant_agent.py  kubernetes_assistant_config.py
src/kubernetes_assistant/clients/: agent.py  discord.py
src/kubernetes_assistant/prompts/: agent_prompt.py
src/kubernetes_assistant/utils/: discord_message_formatter.py
tests/: test_config.py  test_discord_client.py  test_kubernetes_assistant_agent.py
